# prw

./: CMakeLists.txt  LICENSE  README.md  barwidget.c  barwidget.cpp  barwidget.h  dynamic_textwidget.c  dynamic_textwidget.h  makefile  prw.c  prw.cpp  source.c  source.cpp  source.h  static_textwidget.c  static_textwidget.h  textwidget.c  textwidget.cpp  textwidget.h  tooltip_widget.c  tooltip_widget.h  trendwidget.c  trendwidget.cpp  trendwidget.h  widget.c  widget.cpp  widget.h  xconnection.c  xconnection.h
examples/OpenBSD/: battery.sh  lang.sh  load.sh  volume.sh
